@startuml
class Application{
    +main()
        launch()
}

class TodoList{
    +addItem()
    +getFilteredTodoList()
    +getItemList
    +deleteItem()
    +clearItems()
    +filterList()
    +editItem()
}

class TodoListItem{
    -description
    -dueDate
    -completedStatus
    +setDescription()
    +getDescription()
    +setDueDate()
    +getDueDate()
    +getStatus()
    +setStatus(boolean Status)
}

class FilterItems{
    filterItems();
}

class Save{
    +saveTxtFile(File, ObservableList)
}

Application <|-- TodoListItem
Application <|-- TodoList
Application <|-- FilterItems
Application <|-- Save

@enduml